# rss_r

./: .gitignore  Cargo.toml  Makefile.toml  readme.md
resources/local-ssl/: localhost-key.pem  localhost.pem
resources/static/: index.html  sw.js
rss_com_lib/: Cargo.toml  Makefile.toml
rss_com_lib/src/: body.rs  lib.rs  message_body.rs  rss_feed.rs
rss_r_web/: Cargo.toml  Makefile.toml  Trunk.toml  index.html
rss_r_web/.cargo/: config.toml
rss_r_web/assets/: sw.js
rss_r_web/src/: add_feed_popup.rs  app.rs  edit_feed_popup.rs  feed_list_display.rs  hyperlink.rs  lib.rs  login.rs  main.rs  requests.rs  rss_collection.rs
src/: app_config.rs  auth.rs  auth_middleware.rs  error.rs  feed_requester.rs  main.rs  persistence.rs  rss_cache.rs  rss_collection.rs  users.rs
