[package]
name = "rss_r"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss_com_lib = { path = "rss_com_lib" }

actix-web = { version = "4", features = ["rustls"] }
actix-web-lab = "0.16.4"
actix-files = "0.6.1"
actix-identity = "0.4.0"

feed-rs = "1.1"
log = "0.4.17"
simplelog = "0.12.0"
thiserror = "1.0.31"
reqwest = "0.11.11"
ron = "0.7"
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
# Needed for simplelog's time settings.
time = "0.3.1"
# We specifically specify the `openssl` crate, even though we don't depend on it directly,
# because we need to enable the `vendored` feature to make cross compilation to the raspberry pi work.
# See https://github.com/messense/rust-musl-cross/issues/44
# and https://stackoverflow.com/questions/68871193/pkg-config-error-during-rust-cross-compilation
openssl = { version = "0.10.42", features = ["vendored"] }

[dev-dependencies]
pretty_assertions = "1.3.0"

[profile.release]
opt-level = 2 # fast and small wasm

[workspace]
members = [
    "rss_r_web"
]