[package]
name = "rss_r_web"
version = "0.0.3"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rss_com_lib = { path = "../rss_com_lib" }

egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
log = "0.4.17"
console_log = "0.2.0"                                       # Logs to web console
chrono = "0.4"

ehttp = "0.2.0"
poll-promise = "0.1.0"
serde_json = "1.0.82"


# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

[dev-dependencies]
pretty_assertions = "1.3.0"
rstest = "0.15.0"
