[package]
name = "rss_r_web"
version = "0.0.4"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rss_com_lib = { path = "../rss_com_lib" }

egui = "0.27.2"
eframe = { version = "0.27.2", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
log = "0.4.17"
# Logs to web console
console_log = "1.0.0"
chrono = "0.4"

ehttp = "0.5.0"
poll-promise = "0.3.0"
serde_json = "1.0.82"


# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"

# getrandom is a transitive dependency of one of our dependencies, but because we are compiling for
# wasm32-unknown-unknown, we need to specify the "js" feature.
# See `https://docs.rs/getrandom/#webassembly-support` for more info.
getrandom = { version = "0.2.7", features = ["js"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
rstest = "0.21.0"
