[package]
name = "rss_r_web"
version = "0.0.5"
edition = "2021"

[dependencies]
rss_com_lib = { path = "../rss_com_lib" }

egui = "0.27.2"
eframe = { version = "0.27.2", features = ["persistence"] }
serde = { version = "1.0.208", features = ["derive"] }
log = "0.4.22"
# Logs to web console
console_log = "1.0.0"
chrono = "0.4.38"

ehttp = "0.5.0"
poll-promise = "0.3.0"
serde_json = "1.0.125"


# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.43"
# For hiding the loading text
web-sys = "0.3.70"

# getrandom is a transitive dependency of one of our dependencies, but because we are compiling for
# wasm32-unknown-unknown, we need to specify the "js" feature.
# See `https://docs.rs/getrandom/#webassembly-support` for more info.
getrandom = { version = "0.2.15", features = ["js"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = "0.22.0"
